--- a/site/product.html
+++ b/site/product.html
@@ -17,16 +17,16 @@
 <body>
    <header>
     <nav class="navbar navbar-expand">
-      <a class="navbar-brand" href="#">
-        <img src="./img/egyképnemleszegygomb.png">
-        <span>Harenae Castrum</span>
-      </a>
+      <div class="navbar-brand">
+        <img src="./img/boylgo.jpg">
+        <h2>Harenae Castrum</h2>
+      </div>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="./index.html">Főoldal</a>
-          </li>
           <li class="nav-item">
+            <a class="nav-link" href="./index.html"><p>Főoldal</p></a>
+          </li>
+          <li class="nav-item active">
             <a class="nav-link" href="./product.html">Ajánlatok<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
