--- a/site/product.html
+++ b/site/product.html
@@ -15,7 +15,7 @@
     </style>
 </head>
 <body>
-   <header>
+   <header class="fixed-top">
     <nav class="navbar navbar-expand">
       <div class="navbar-brand">
         <img src="./img/boylgo.jpg">
@@ -36,16 +36,28 @@
       </div>
     </nav> 
   </header>
-    <main>
-        <div class="item">
-          <img src="./img/boylgo.jpg">
+  <main>
+    <div class="item">
+        <img src="./img/boylgo.jpg">
+        <div class="desc" id="details">
+            <h2>Planet_Name</h2>
+            <p>efhafoiahndfihníaifvdijvni íabvuiadíbvuiabdvlibdavilbdagv eibdblvíakegbvilbígriwíb</p>
         </div>
-        <div class="item">
-          <img src="./img/boylgo.jpg">
+        <div class="desc" id="add">
+            <a class="termek_button" href="">Foglalás</a>
         </div>
-        <div class="item">
-          <img src="./img/boylgo.jpg">
-        </div>
-    </main>
+    </div>
+    <div class="item">
+      <img src="./img/boylgo.jpg">
+      <div class="desc" id="details">
+          <h2>Planet_Name</h2>
+          <p>efhafoiahndfihníaifvdijvni íabvuiadíbvuiabdvlibdavilbdagv eibdblvíakegbvilbígriwíb</p>
+      </div>
+      <div class="desc" id="add">
+          <a class="termek_button" href="">Foglalás</a>
+      </div>
+  </div>
+</main>
+
 </body>
 </html>
