--- a/site/index.html
+++ b/site/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Főoldal</title>
+    <style>
+        body{
+            overflow: hidden;
+            background-image: url(./img/bg.png);
+        }
+    </style>
 </head>
 <body>
     <main>
