na ez már alakul (cart)

--- a/site/cart.html
+++ b/site/cart.html
@@ -31,14 +31,18 @@
         </nav> 
     </header>
     <main>
-        <div class="cica">
-
+        <div class="column" id="c1">
+          <div class="pay_item" id="pay_detail">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur dolores vero similique repellendus adipisci, cum, illo non quibusdam laborum temporibus facere nesciunt qui officiis, quas fugiat eveniet provident ipsam est! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos eos, ex reprehenderit, cumque earum iusto nam numquam consequatur deserunt placeat atque dolorum minus architecto, veniam ullam non quos delectus harum.
+          </div>
+          <div class="pay_item" id="pay_form">
+            
+          </div>
         </div>
-        <div class="cica">
-
-        </div>
-        <div class="cica" id="pay">
-
+        <div class="column" id="c2">
+          <div class="pay_item" id="pay_sum">
+            <img src="./img/boylgo.jpg" id="pay_img">
+          </div>
         </div>
     </main>
 </body>
