--- a/site/index.html
+++ b/site/index.html
@@ -12,6 +12,10 @@
             overflow: hidden;
             background-image: url(./img/bg.png);
         }
+        
+        main{
+            padding: 0;
+        }
     </style>
 </head>
 <body>
