--- a/site/cart.html
+++ b/site/cart.html
@@ -21,10 +21,10 @@
                 <a class="nav-link" href="./index.html"><p>Főoldal</p></a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="./product.html">Ajánlatok<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="./product.html"><p>Ajánlatok</p><span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled" href="./cart.html">Kosár</a>
+                <a class="nav-link disabled" href="./cart.html"><p>Kosár</p></a>
               </li>
             </ul>
           </div>
