css is forever and it's meant to suck a lot

--- a/site/cart.html
+++ b/site/cart.html
@@ -36,7 +36,16 @@
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur dolores vero similique repellendus adipisci, cum, illo non quibusdam laborum temporibus facere nesciunt qui officiis, quas fugiat eveniet provident ipsam est! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos eos, ex reprehenderit, cumque earum iusto nam numquam consequatur deserunt placeat atque dolorum minus architecto, veniam ullam non quos delectus harum.
           </div>
           <div class="pay_item" id="pay_form">
-            
+            <form>
+              <label>Név: </label>
+              <input type="text">
+              <br>
+              <label>Utazás dátuma:</label>
+              <input type="date">
+              <br>
+              <label>Honnan?:</label>
+              <input type="text">
+            </form>
           </div>
         </div>
         <div class="column" id="c2">
