--- a/site/product.html
+++ b/site/product.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Termékek</title>
+    <style>
+      main{
+        height: 100%;
+      }
+    </style>
 </head>
 <body>
    <header class="fixed-top">
