VAN FOOLDALNAK ANIMACIOJA HIHI MEG FOOTER

--- a/site/index.html
+++ b/site/index.html
@@ -25,14 +25,20 @@
                 Harenae Castrum
             </h1>
         </div>
+        <div class="bottom_div">
+            <div class="down" style="text-align: justify">
+                    <p>Féreglyukak elérhető áron, miközben odaérhet nem időben! Szó szerint. Menjen el reményekkel és akarva többet tudni, érkezzen felejthetetlen élményekkel a legmesszebbi részéről a világunknak! Minden faj megengedett. </p>
+            </div>
+            <div class="down">
+                <a class="termek_button btn" href="./product.html">Termékek</a>
+            </div>
+        </div>
     </main>
     <footer>
-        <div class="down" style="text-align: justify">
-                <p>Féreglyukak elérhető áron, miközben odaérhet nem időben! Szó szerint. Menjen el reményekkel és akarva többet tudni, érkezzen felejthetetlen élményekkel a legmesszebbi részéről a világunknak! Minden faj megengedett. </p>
-        </div>
-        <div class="down">
-            <a class="termek_button btn" href="./product.html">Termékek</a>
-        </div>
+
     </footer>
+    <img src="./img/boylgo.jpg" class="arrow-down" alt="Arrow Icon">
+
+    <script src="./script/jump_animation.js"></script>
 </body>
 </html>
