--- a/site/product.html
+++ b/site/product.html
@@ -9,7 +9,7 @@
     <title>Termékek</title>
     <style>
       main{
-        height: 100%;
+        height:fit-content;
       }
     </style>
 </head>
