fixed #8, moved the overlay functions in a different file

--- a/site/index.html
+++ b/site/index.html
@@ -7,13 +7,14 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <script src="./script/jump_animation.js"></script>
+    <script src="./script/overlay.js"></script>
     <title>Főoldal</title>
     <style>
         body{
             overflow: hidden;
             background-image: url(./img/bg.png);
         }
-        
+
         main{
             padding: 0;
         }
@@ -36,7 +37,7 @@
                 <a class="termek_button btn" href="./product.html">Termékek</a>
             </div>
         </div>
-        
+
     </main>
     <footer>
 
