--- a/site/index.html
+++ b/site/index.html
@@ -9,19 +9,9 @@
     <script src="./script/jump_animation.js"></script>
     <script src="./script/overlay.js"></script>
     <title>Főoldal</title>
-    <style>
-        body{
-            overflow: hidden;
-            background-image: url(./img/bg.png);
-        }
-
-        main{
-            padding: 0;
-        }
-    </style>
 </head>
-<body>
-    <main>
+<body class="index_body">
+    <main class="index_main">
         <div>
             <h1>Harenae Castrum</h1>
         </div>
