--- a/site/cart.html
+++ b/site/cart.html
@@ -48,7 +48,7 @@
             </form>
           </div>
         </div>
-        <div class="column" id="column2">
+        <div class="pay_column" id="column2">
           <div class="pay_item" id="pay_sum">
             <img src="./img/boylgo.jpg" id="pay_img">
           </div>
