there was something I wanted to put here from Dorian Gray but I forgot so uhhh, here have decentlyl looking site

--- a/site/cart.html
+++ b/site/cart.html
@@ -33,24 +33,26 @@
     <main>
         <div class="pay_column" id="column1">
           <div class="pay_item" id="pay_detail">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur dolores vero similique repellendus adipisci, cum, illo non quibusdam laborum temporibus facere nesciunt qui officiis, quas fugiat eveniet provident ipsam est! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos eos, ex reprehenderit, cumque earum iusto nam numquam consequatur deserunt placeat atque dolorum minus architecto, veniam ullam non quos delectus harum.
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur dolores vero similique repellendus adipisci, cum, illo non quibusdam laborum temporibus facere nesciunt qui officiis, quas fugiat eveniet provident ipsam est! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos eos, ex reprehenderit, cumque earum iusto nam numquam consequatur deserunt placeat atque dolorum minus architecto, veniam ullam non quos delectus harum.</p>
           </div>
           <div class="pay_item" id="pay_form">
             <form>
-              <label>Név: </label>
-              <input type="text">
-              <br>
-              <label>Utazás dátuma:</label>
-              <input type="date">
-              <br>
-              <label>Honnan?:</label>
-              <input type="text">
+              <label for="name">Név: </label>
+        <input type="text" id="name" name="name">
+        <br>
+        <label for="date">Utazás dátuma:</label>
+        <input type="date" id="date" name="date">
+        <br>
+        <label for="from">Honnan?:</label>
+        <input type="text" id="from" name="from">
             </form>
           </div>
         </div>
         <div class="pay_column" id="column2">
           <div class="pay_item" id="pay_sum">
             <img src="./img/boylgo.jpg" id="pay_img">
+            <p>(ide majd kell az ár)</p>
+            <a class="termek_button cart_btn" href="">Fizetés</a>
           </div>
         </div>
     </main>
