--- a/site/index.html
+++ b/site/index.html
@@ -19,7 +19,7 @@
             <div class="bottom_item" id="bottom_desc">
                     <p>Féreglyukak elérhető áron, miközben odaérhet nem időben! Szó szerint. Menjen el reményekkel és akarva többet tudni, érkezzen felejthetetlen élményekkel a legmesszebbi részéről a világunknak! Minden faj megengedett. </p>
             </div>
-            <div class="bottom_item">
+            <div class="bottom_item" id="arrow_div">
                 <img src="./img/arrow-down.png" class="arrow-down arrow" alt="Down Arrow Icon">
                 <img src="./img/arrow-up.png" class="arrow-up arrow" alt="Up Arrow Icon" style="display: none;">
             </div>
