asom a helyemet mert megoltok idegileg a sirba teszTEEEEEEK

--- a/site/index.html
+++ b/site/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <script src="./script/jump_animation.js"></script>
-    <script src="./script/overlay.js"></script>
     <title>Főoldal</title>
 </head>
 <body class="index_body">
@@ -30,7 +29,25 @@
 
     </main>
     <footer>
-
+        <div class="portrait">
+        <figure class="portrait_div">
+            <img class="portrait_img" src="./img/portrait.png">
+            <figcaption>Bakó Borka</figcaption>
+        </figure>
+        <figure class="portrait_div">
+            <img class="portrait_img" src="./img/portrait.png">
+            <figcaption>Nagy Dávid</figcaption>
+        </figure>
+        <figure class="portrait_div">
+            <img class="portrait_img" src="./img/portrait.png">
+            <figcaption>Tokodi Mihály</figcaption>
+        </figure>
+        </div>
+        <div class="socials">
+            <h2>Kontakt</h2>
+            <br>
+        </div>
     </footer>
+    
 </body>
 </html>
