--- a/site/index.html
+++ b/site/index.html
@@ -23,7 +23,7 @@
                 <img src="./img/arrow-up.png" class="arrow-up arrow" alt="Up Arrow Icon" style="display: none;">
             </div>
             <div class="bottom_item" id="bottom_btn">
-                <a class="termek_button btn" href="./product.html">Termékek</a>
+                <a class="termek_button btn" href="./product.php">Termékek</a>
             </div>
         </div>
 
@@ -32,15 +32,14 @@
         <div class="portrait">
         <figure class="portrait_div">
             <img class="portrait_img" src="./img/portrait.png">
-            <figcaption>Bakó Borka</figcaption>
         </figure>
         <figure class="portrait_div">
             <img class="portrait_img" src="./img/portrait.png">
-            <figcaption>Nagy Dávid</figcaption>
+            
         </figure>
         <figure class="portrait_div">
             <img class="portrait_img" src="./img/portrait.png">
-            <figcaption>Tokodi Mihály</figcaption>
+            
         </figure>
         </div>
         <div class="socials">
