the poer of friendship

--- a/site/index.html
+++ b/site/index.html
@@ -17,7 +17,7 @@
         </div>
         <div class="bottom_div">
             <div class="bottom_item" id="bottom_desc">
-                    <p>Féreglyukak elérhető áron, miközben odaérhet nem időben! Szó szerint. Menjen el reményekkel és akarva többet tudni, érkezzen felejthetetlen élményekkel a legmesszebbi részéről a világunknak! Minden faj megengedett. </p>
+                    <p>Féreglyukak elérhető áron! Ne számitson a távolság, érjen időben bárhova! Vegyen részt utazásokban a teljes univerzum bármelyik pontjába, térjen haza felejthetetlen élményekkel! Minden faj megengedett. </p>
             </div>
             <div class="bottom_item" id="arrow_div">
                 <img src="./img/arrow-down.png" class="arrow-down arrow" alt="Down Arrow Icon">
@@ -31,17 +31,17 @@
     </main>
     <footer>
         <div class="portrait" id="devs">
-            <h2>Rólunk</h2>
+            <h2>Készítette</h2>
         </div>
         <div class="portrait">
         <div class="portrait_div">
-            <img class="portrait_img" src="./img/portrait.png">
+            <img class="portrait_img" src="./img/borka1_00000.png">
         </div>
         <div class="portrait_div">
-            <img class="portrait_img" src="./img/portrait.png">
+            <img class="portrait_img" src="./img/david1_00000.png">
         </div>
         <div class="portrait_div">
-            <img class="portrait_img" src="./img/portrait.png">
+            <img class="portrait_img" src="./img/mihaly1_00000.png">
         </div>
         </div>
     </footer>
